kubernetes/apps/o11y/health-metrics/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmhealth
spec:
  hostnames:
    - vmhealth.nikola.wtf
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmsingle-health
          namespace: o11y
          port: 8429
